fix(plugins/plugin-client-common): commentary editor can overflow with long lines
Fixes #5981

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
@@ -144,6 +144,9 @@
   @include Paragraphs {
     font-size: 1rem;
     line-height: 1.5rem;
+
+    /* see https://github.com/IBM/kui/issues/5981 */
+    word-break: break-all;
   }
 
   /* while editing, use a different background color for the Markdown preview */
